--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nova Star Shop</title>
+    <link href = "main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+</head>
+</html>
+
+<body>
+    <header>
+
+        <div class="website-nav">
+
+            <h1>Nova</h1>
+            
+            <div class = "menu">
+            <h4><a href="pages/galaxies.html">Stars</a></h4>
+            <h4><a href ="pages/nebulae.html">Nebulae</a></h4>
+            <h4><a href ="pages/galaxies.html">Galaxies</a></h4>
+            <h4><a href ="pages/planets.html">Planets</a></h4>
+            <h4><a href ="pages/rocks.html">Rocks</a></h4>
+            <h4><a href ="pages/sale.html">Sale</a></h4>
+            </div>
+
+        </div>
+    </header>
+
+</body>
