update home page link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="website-nav">
 
-            <h1>Nova</h1>
+            <h1><a href="index.html">Nova</a></h1>
 
             <div class = "menu">
             <h4><a href="galaxies.html">Stars</a></h4>
