Andromeda product page

--- a/index.html
+++ b/index.html
@@ -35,44 +35,44 @@
 
             <div class=product-listing>
             <img src="img/Andromeda.png" alt="Andromeda Galaxy" width="350" height="350">
-            <h2>Andromeda Galaxy</h2>
+            <h2><a href="andromeda.html">Andromeda Galaxy</a></h2>
             <h3>Astronomical Number | Galaxy</h3>
-            <h5>$500,000,000</h5>
+            <p>$500,000,000</p>
             </div>
 
             <div class=product-listing>
             <img src="img/andromedas_cluster.png" alt="Andromeda Cluster" width="350" height="350">
             <h2>Andromeda Cluster</h2>
             <h3>Astronomical Number | Cluster</h3>
-            <h5>$500,000,000</h5>
+            <p>$500,000,000</p>
             </div>
 
             <div class=product-listing>
             <img src="img/blue_snowball.png" alt="Blue Snowball" width="350" height="350">
             <h2>Blue Snow Ball</h2>
             <h3>Astronomical Number | Galaxy</h3>
-            <h5>$500,000,000</h5>
+            <p>$500,000,000</p>
             </div>
 
             <div class=product-listing>
             <img src="img/dwarf_galaxy.png" alt="Dwarf Galaxy" width="350" height="350">
             <h2>Dwarf Galaxy</h2>
             <h3>Astronomical Number | Galaxy</h3>
-            <h5>$500,000,000</h5>
+            <p>$500,000,000</p>
             </div>
 
             <div class=product-listing>
             <img src="img/no_name.png" alt="No Name" width="350" height="350">
             <h2>No Name</h2>
             <h3>Astronomical Number | Galaxy</h3>
-            <h5>$500,000,000</h5>
+            <p>$500,000,000</p>
             </div>
 
             <div class=product-listing>
             <img src="img/rose_galaxy.png" alt="Rose Galaxy" width="350" height="350">
             <h2>Rose Galaxy</h2>
             <h3>Astronomical Number | Galaxy</h3>
-            <h5>$500,000,000</h5>
+            <p>$500,000,000</p>
             </div>
 
         </div>
