update andromeda page

--- a/andromeda.html
+++ b/andromeda.html
@@ -34,9 +34,16 @@
 
         <div class="product-info">
         <div class="text-container">
-            <h3>Astronomical Number | Galaxy</h3>
-            <h7>Andromeda Galaxy</h7>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+
+            <div class="product-description">
+                <h3>Astronomical Number | Galaxy</h3>
+                <h7>Andromeda Galaxy</h7>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+            </div>
+            <div class="product-price">
+                <h5>$500,000,000</h5>
+                <a class="cart-button" href="#">Add to Cart</a>
+            </div>
         </div>
 
         <div class="image-container">
