work on product page

--- a/andromeda.html
+++ b/andromeda.html
@@ -40,10 +40,59 @@
                 <h7>Andromeda Galaxy</h7>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
             </div>
+
             <div class="product-price">
                 <h5>$500,000,000</h5>
                 <a class="cart-button" href="#">Add to Cart</a>
             </div>
+
+            <div class="product-details">
+                <p>Product Details</p>
+                
+                <div class="border"></div>
+                <div class="detail">
+                    <h3>Distance</h3>
+                    <h3>765 kpc</h3>
+                </div>
+
+                <div class="border"></div>
+                <div class="detail">
+                    <h3>Constellation</h3>
+                    <h3>Andromeda</h3>
+                </div>
+
+                <div class="border"></div>
+                <div class="detail">
+                    <h3>Type</h3>
+                    <h3>Sa(s)b</h3>
+                </div>
+
+                <div class="border"></div>
+                <div class="detail">
+                    <h3>Mass</h3>
+                    <h3>(1.5±0.2)×1012</h3>
+                </div>
+
+                <div class="border"></div>
+                <div class="detail">
+                    <h3>Size</h3>
+                    <h3>152,000 ly</h3>
+                </div>
+
+                <div class="border"></div>
+                <div class="detail">
+                    <h3>Apparent Size (v)</h3>
+                    <h3>3.167 × 1</h3>
+                </div>
+
+                <div class="border"></div>
+                <div class="detail">
+                    <h3>Length (Physical)</h3>
+                    <h3>326,000 ly</h3>
+                </div>
+                <div class="border"></div>
+            </div>
+
         </div>
 
         <div class="image-container">
