Updated all listing pages
Coded product listing and adjusted content for each page

--- a/galaxies.html
+++ b/galaxies.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-</html>
 
 <body>
     <header>
@@ -21,7 +20,7 @@
             <h1><a href="index.html">Nova</a></h1>
             
             <div class = "menu">
-            <h4><a href="galaxies.html">Stars</a></h4>
+            <h4><a href="stars.html">Stars</a></h4>
             <h4><a href ="nebulae.html">Nebulae</a></h4>
             <h4><a href ="galaxies.html">Galaxies</a></h4>
             <h4><a href ="planets.html">Planets</a></h4>
@@ -32,4 +31,61 @@
         </div>
     </header>
 
+        <section>
+
+        <div class="products">
+
+            <div class="listing-header">
+            <h4>Galaxies</h4>
+             <p> Description here Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/Andromeda.png" alt="Andromeda Galaxy" width="350" height="350">
+            <h2><a href="andromeda.html">Andromeda Galaxy</a></h2>
+            <h3>Astronomical Number | Galaxy</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/blinking_galaxy.jpg" alt="Blinking Galaxy" width="350" height="350">
+            <h2>Blinking Galaxy</h2>
+            <h3>NGC 6118 | Galaxy</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/black_eye_galaxy.png" alt="Black Eye Galaxy" width="350" height="350">
+            <h2>Black Eye Galaxy</h2>
+            <h3>Astronomical Number | Galaxy</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/dwarf_galaxy.png" alt="Dwarf Galaxy" width="350" height="350">
+            <h2>Dwarf Galaxy</h2>
+            <h3>Astronomical Number | Galaxy</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/no_name.png" alt="No Name" width="350" height="350">
+            <h2>No Name</h2>
+            <h3>Astronomical Number | Galaxy</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/rose_galaxy.png" alt="Rose Galaxy" width="350" height="350">
+            <h2>Rose Galaxy</h2>
+            <h3>Astronomical Number | Galaxy</h3>
+            <p>$500,000,000</p>
+            </div>
+
+        </div>
+
+    </section>
+
+
 </body>
+</html>
