--- a/nebulae.html
+++ b/nebulae.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-</html>
 
 <body>
     <header>
@@ -21,7 +20,7 @@
             <h1><a href="index.html">Nova</a></h1>
             
             <div class = "menu">
-            <h4><a href="galaxies.html">Stars</a></h4>
+            <h4><a href="stars.html">Stars</a></h4>
             <h4><a href ="nebulae.html">Nebulae</a></h4>
             <h4><a href ="galaxies.html">Galaxies</a></h4>
             <h4><a href ="planets.html">Planets</a></h4>
@@ -32,4 +31,61 @@
         </div>
     </header>
 
+        <section>
+
+        <div class="products">
+
+            <div class="listing-header">
+            <h4>Nebulae</h4>
+             <p> Description here Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/e_nebula.png" alt="E Nebula" width="350" height="350">
+            <h2><a href="andromeda.html">E Nebula</a></h2>
+            <h3> Barnard 142 & 143 | Dark Nebula</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/blue_snowball.png" alt="Blue Snowball" width="350" height="350">
+            <h2>Blue Snow Ball</h2>
+            <h3>NGC 7662 | Planetary Nebulae</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/markarian.jpg" alt="Markarian" width="350" height="350">
+            <h2>Markarian 348</h2>
+            <h3>NGC 262 | Nebula</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/leo_ring.jpg" alt="Leo Ring" width="350" height="350">
+            <h2>Leo Ring</h2>
+            <h3>Astronomical Number | Nebula</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/ghost_of_jupiter.jpg" alt="Ghost of Jupiter" width="350" height="350">
+            <h2>Ghost of Jupiter</h2>
+            <h3>NGC 3242 | Planetary Nebulae</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/cat_eye_nebula.jpg" alt="Cat's Eye Nebula" width="350" height="350">
+            <h2>Cat's Eye Nebula</h2>
+            <h3>NGC 6543 | Planetary Nebulae</h3>
+            <p>$500,000,000</p>
+            </div>
+
+        </div>
+
+    </section>
+
+
 </body>
+</html>
