--- a/stars.html
+++ b/stars.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-</html>
 
 <body>
     <header>
@@ -21,7 +20,7 @@
             <h1><a href="index.html">Nova</a></h1>
             
             <div class = "menu">
-            <h4><a href="galaxies.html">Stars</a></h4>
+            <h4><a href="stars.html">Stars</a></h4>
             <h4><a href ="nebulae.html">Nebulae</a></h4>
             <h4><a href ="galaxies.html">Galaxies</a></h4>
             <h4><a href ="planets.html">Planets</a></h4>
@@ -32,4 +31,61 @@
         </div>
     </header>
 
+        <section>
+
+        <div class="products">
+
+            <div class="listing-header">
+            <h4>Stars</h4>
+             <p> Description here Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/lynx.jpg" alt="Alpha Lyncis" width="350" height="350">
+            <h2><a href="andromeda.html">Alpha Lyncis, Lynx</a></h2>
+            <h3>Astronomical Number | Star</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/antares.jpg" alt="Antares Star" width="350" height="350">
+            <h2>Antares, Scorpius</h2>
+            <h3>Astronomical Number | Star</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/serpens.jpg" alt="Serpens" width="350" height="350">
+            <h2>10 Serpentis, Serpens</h2>
+            <h3>Astronomical Number | Star</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/thuban.jpg" alt="Thuban" width="350" height="350">
+            <h2>Thuban, Draco</h2>
+            <h3>Astronomical Number | Star</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/velorum_cluster.png" alt="Omicron Velorum" width="350" height="350">
+            <h2>Omicron Velorum, Vela</h2>
+            <h3>Astronomical Number | Star</h3>
+            <p>$500,000,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/beta_librae.jpg" alt="Beta Librae" width="350" height="350">
+            <h2>Beta Librae, Libra</h2>
+            <h3>Astronomical Number | Star</h3>
+            <p>$500,000,000</p>
+            </div>
+
+        </div>
+
+    </section>
+
+
 </body>
+</html>
