--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1><a href="index.html">Nova</a></h1>
 
             <div class = "menu">
-            <h4><a href="galaxies.html">Stars</a></h4>
+            <h4><a href="stars.html">Stars</a></h4>
             <h4><a href ="nebulae.html">Nebulae</a></h4>
             <h4><a href ="galaxies.html">Galaxies</a></h4>
             <h4><a href ="planets.html">Planets</a></h4>
@@ -31,6 +31,15 @@
     </header>
 
     <section>
+
+        <div class="ad-listing">
+            <img src="img/space-ad.png" alt="Ad page" width="1180" height="350">
+        </div>
+
+        <div>
+            <h1 class="listing-header">Trending Items</h1>
+        </div>
+
         <div class="products">
 
             <div class=product-listing>
@@ -50,7 +59,7 @@
             <div class=product-listing>
             <img src="img/blue_snowball.png" alt="Blue Snowball" width="350" height="350">
             <h2>Blue Snow Ball</h2>
-            <h3>Astronomical Number | Galaxy</h3>
+            <h3>Astronomical Number | Nebula</h3>
             <p>$500,000,000</p>
             </div>
 
