--- a/rocks.html
+++ b/rocks.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-</html>
 
 <body>
     <header>
@@ -21,7 +20,7 @@
             <h1><a href="index.html">Nova</a></h1>
             
             <div class = "menu">
-            <h4><a href="galaxies.html">Stars</a></h4>
+            <h4><a href="stars.html">Stars</a></h4>
             <h4><a href ="nebulae.html">Nebulae</a></h4>
             <h4><a href ="galaxies.html">Galaxies</a></h4>
             <h4><a href ="planets.html">Planets</a></h4>
@@ -32,4 +31,33 @@
         </div>
     </header>
 
+        <section>
+
+        <div class="products">
+
+            <div class="listing-header">
+            <h4>Rocks</h4>
+             <p> Description here Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/hygiea.jpg" alt="10 Hygiea" width="350" height="350">
+            <h2><a href="andromeda.html">10 Hygiea</a></h2>
+            <h3>Astronomical Number | Asteroid</h3>
+            <p>$50,000</p>
+            </div>
+
+            <div class=product-listing>
+            <img src="img/juno.png" alt="3 Juno" width="350" height="350">
+            <h2>3 Juno</h2>
+            <h3>Astronomical Number | Asteroid</h3>
+            <p>$30,300</p>
+            </div>
+
+        </div>
+
+    </section>
+
+
 </body>
+</html>
