add andromedas cluster

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class=product-listing>
             <img src="img/andromedas_cluster.png" alt="Andromeda Cluster" width="350" height="350">
-            <h2>Andromeda Cluster</h2>
+            <h2><a href="andromedas-cluster.html">Andromeda Cluster</a></h2>
             <h3>Astronomical Number | Cluster</h3>
             <p>$500,000,000</p>
             </div>
