adding product pages

--- a/andromeda.html
+++ b/andromeda.html
@@ -36,7 +36,7 @@
         <div class="text-container">
 
             <div class="product-description">
-                <h3>Astronomical Number | Galaxy</h3>
+                <h3>NGC 224 | Galaxy</h3>
                 <h7>Andromeda Galaxy</h7>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
             </div>
