--- a/dwarf-galaxy.html
+++ b/dwarf-galaxy.html
@@ -36,13 +36,13 @@
         <div class="text-container">
 
             <div class="product-description">
-                <h3>Astronomical Number | Cluster</h3>
-                <h7>Andromeda's Cluster</h7>
+                <h3>NGC 221 | Galaxy</h3>
+                <h7>Dwarf Galaxy</h7>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
             </div>
 
             <div class="product-price">
-                <h5>$120,000,000</h5>
+                <h5>$100,000,000</h5>
                 <a class="cart-button" href="#">Add to Cart</a>
             </div>
 
@@ -52,7 +52,7 @@
                 <div class="border"></div>
                 <div class="detail">
                     <h3>Distance</h3>
-                    <h3>765 kpc</h3>
+                    <h3>763 ± 24 kpc</h3>
                 </div>
 
                 <div class="border"></div>
@@ -64,38 +64,32 @@
                 <div class="border"></div>
                 <div class="detail">
                     <h3>Type</h3>
-                    <h3>Sa(s)b</h3>
+                    <h3>cE2</h3>
                 </div>
 
                 <div class="border"></div>
                 <div class="detail">
-                    <h3>Mass</h3>
-                    <h3>(1.5±0.2)×1012</h3>
+                    <h3>Apparent Magnitude (v)</h3>
+                    <h3>8.08</h3>
                 </div>
 
                 <div class="border"></div>
                 <div class="detail">
                     <h3>Size</h3>
-                    <h3>152,000 ly</h3>
+                    <h3>8,000 ly</h3>
                 </div>
 
                 <div class="border"></div>
                 <div class="detail">
                     <h3>Apparent Size (v)</h3>
-                    <h3>3.167 × 1</h3>
-                </div>
-
-                <div class="border"></div>
-                <div class="detail">
-                    <h3>Length (Physical)</h3>
-                    <h3>326,000 ly</h3>
+                    <h3>8.7 × 6.5</h3>
                 </div>
             </div>
 
         </div>
 
         <div class="image-container">
-            <img src="img/andromedas_cluster.png" alt-="Andromeda's Cluster Galaxy">
+            <img src="img/dwarf_galaxy.png" alt-="Dwarf Galaxy">
         </div>
         </div>
 
