--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <h4><a href ="rocks.html">Rocks</a></h4>
             <h4><a href ="sale.html">Sale</a></h4>
             </div>
+            
+            <a href="cart.html"><img src="icons/cart-icon.png" alt="Cart Icon" width="24" height="24"></a>
 
         </div>
     </header>
