--- a/stars.html
+++ b/stars.html
@@ -28,6 +28,8 @@
             <h4><a href ="sale.html">Sale</a></h4>
             </div>
 
+            <a href="cart.html"><img src="icons/cart-icon.png" alt="Cart Icon" width="24" height="24"></a>
+
         </div>
     </header>
 
