--- a/cart.html
+++ b/cart.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div>
-                    <a class="cart-button" href="#">Checkout</a>
+                    <a class="cart-button" href="checkout.html">Checkout</a>
                 </div>
             </div>
         </div>
